<resources>
    <string name="app_name">Safe Ride</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="device">Device number</string>
    <string name="profile">Profile</string>
    <string name="footage">Footage</string>
    <string name="alerts">Alerts</string>
    <string name="home">Home</string>
</resources>